Fix broken image source

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main class="container">
         <div class="split left">
-            <img src="/images/ibn-al-haytham.png" alt="Picture of ibn-al-haytham">
+            <img src="./images/ibn-al-haytham.png" alt="Picture of ibn-al-haytham">
             <h1>IBN AL-HAYTHAM</h1>
             <h2>THE FATHER OF MODERN OPTICS</h2>
         </div>
