--- a/index.html
+++ b/index.html
@@ -11,34 +11,45 @@
 </head>
 
 <body>
-    <main class="container">
+    <main id="main" class="container">
         <div class="split left">
-            <img src="./images/ibn-al-haytham.png" alt="Picture of ibn-al-haytham">
-            <h1>IBN AL-HAYTHAM</h1>
-            <h2>THE FATHER OF MODERN OPTICS</h2>
+            <div id="img-div">
+                <img id="image" src="./images/ibn-al-haytham.png" alt="Picture of ibn-al-haytham">
+                <div id="img-caption">Ibn Al-Haytham</div>
+            </div>
+            <div id="title">
+                <h1>IBN AL-HAYTHAM</h1>
+                <h2>THE FATHER OF MODERN OPTICS</h2>
+            </div>
         </div>
         <div class="split right">
-            <div>
-            <p>Born around a thousand years ago in present day Iraq, Al-Hasan Ibn al-Haytham (known in the West by the Latinised
-                form of his first name, initially “Alhacen” and later “Alhazen”) was a pioneering scientific thinker who
-                made important contributions to the understanding of vision, optics and light. His methodology of investigation,
-                in particular using experiment to verify theory, shows certain similarities to what later became known as
-                the modern scientific method.</p>
-            <p>Through his Book of Optics (Kitab al-Manazir) and its Latin translation (De Aspectibus), his ideas influenced
-                European scholars including those of the European Renaissance. Today, many consider him a pivotal figure
-                in the history of optics and the “Father of modern Optics”.</p>
-            <p>Ibn al-Haytham was born during a creative period known as the golden age of Muslim civilisation that saw many
-                fascinating advances in science, technology and medicine. In an area that spread from Spain to China, inspirational
-                men and women, of different faiths and cultures, built upon knowledge of ancient civilisations, making discoveries
-                that had a huge and often under appreciated impact on our world.</p>
-            <p>Discover more about
-                <a href="http://www.ibnalhaytham.com/discover/ibn-al-haytham/who-was-ibn-al-haytham/" target="_blank">Ibn al-Haytham</a> and the
-                <a href="http://www.ibnalhaytham.com/discover/international-year-of-light/about-iyl2015/" target="_blank">International Year of Light 2015</a>.</p>
+            <div id="tribute-info">
+                <p>Born around a thousand years ago in present day Iraq, Al-Hasan Ibn al-Haytham (known in the West by the Latinised
+                    form of his first name, initially “Alhacen” and later “Alhazen”) was a pioneering scientific thinker
+                    who made important contributions to the understanding of vision, optics and light. His methodology of
+                    investigation, in particular using experiment to verify theory, shows certain similarities to what later
+                    became known as the modern scientific method.</p>
+                <p>Through his Book of Optics (Kitab al-Manazir) and its Latin translation (De Aspectibus), his ideas influenced
+                    European scholars including those of the European Renaissance. Today, many consider him a pivotal figure
+                    in the history of optics and the “Father of modern Optics”.</p>
+                <p>Ibn al-Haytham was born during a creative period known as the golden age of Muslim civilisation that saw
+                    many fascinating advances in science, technology and medicine. In an area that spread from Spain to China,
+                    inspirational men and women, of different faiths and cultures, built upon knowledge of ancient civilisations,
+                    making discoveries that had a huge and often under appreciated impact on our world.
+                </p>
+                <p>Discover more about
+                    <a href="http://www.ibnalhaytham.com/discover/ibn-al-haytham/who-was-ibn-al-haytham/" target="_blank">Ibn al-Haytham</a> and the
+                    <a href="http://www.ibnalhaytham.com/discover/international-year-of-light/about-iyl2015/" target="_blank">International Year of Light 2015</a>.</p>
 
-            <p><cite>The above information taken from <a href="http://www.ibnalhaytham.com/" target="_blank">www.ibnalhaytham.com</a></cite></p>  
-        </div>
+                <p>
+                    <cite>The above information taken from
+                        <a id="tribute-link" href="http://www.ibnalhaytham.com/" target="_blank">www.ibnalhaytham.com</a>
+                    </cite>
+                </p>
+            </div>
         </div>
     </main>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
