--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main id="main" class="container">
         <div class="split left">
             <div id="img-div">
-                <img id="image" src="./images/ibn-al-haytham.png" alt="Picture of ibn-al-haytham">
+                <img id="image" src="images/ibn-al-haytham.png" alt="Picture of ibn-al-haytham">
                 <div id="img-caption">Ibn Al-Haytham</div>
             </div>
             <div id="title">
